# users-edit-api

./: .gitignore  Makefile  README.md  docker-compose.db.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 4dcf4644652a_init.py
users_edit_api/: __init__.py  database.py  settings.py
users_edit_api/models/: users.py
users_edit_api/routes/: __init__.py  users.py
users_edit_api/routes/schemas/: user.py
