[tool.poetry]
name = "users-edit-api"
version = "0.1.0"
description = ""
authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
readme = "README.md"
packages = [{include = "users_edit_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
pydantic = "^1.10.7"
asyncpg = "^0.27.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
